# mcp-client

./: .env.example  .gitignore  LICENSE  MCP-documentation.md  PLANNING.MD  README.md  TAKEN.MD  VOLGENDE_STAPPEN.MD  db_test.py  main.py  pyproject.toml
mcp_client/api/: app.py  chat_routes.py  chat_store.py  models.py  routes.py
mcp_client/config/: settings.py
mcp_client/core/mcp/: client.py
mcp_client/database/: __init__.py  base.py  chat_store.py  models.py
mcp_client/llm/: anthropic.py  base.py  mock.py  openai.py
mcp_client/static/: chat.html  index.html
mcp_client_config/: servers.json
