[project]
name = "mcp-client"
version = "0.1.0"
description = "Een Python webapplicatie voor het interacteren met Large Language Models en het verbinden met Model Context Protocol (MCP) servers."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.108.0",
    "uvicorn>=0.25.0",
    "anthropic>=0.18.1",
    "openai>=1.12.0",
    # "mcp-python-sdk>=1.5.0",  # Temporary commented out until we implement our own
    "pydantic>=2.5.3",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",
    "sqlalchemy>=2.0.25",
    "alembic>=1.13.1",
    "httpx>=0.26.0",
    "websockets>=12.0",
    "jinja2>=3.1.3",
    "sse-starlette>=1.6.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "black>=23.12.0",
    "ruff>=0.1.8",
    "mypy>=1.7.1",
    "pytest-cov>=4.1.0",
]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "I"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[build-system]
requires = ["setuptools>=42.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["mcp_client"]
